syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "ItemParam.proto";

message GachaTransferItem {
	ItemParam item = 1;
	bool is_transfer_item_new = 2;
}
