syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "ItemParam.proto";
import "GachaTransferItem.proto";

message GachaItem {
	ItemParam gacha_item_ = 1;
	repeated GachaTransferItem transfer_items = 2;
	bool is_flash_card = 3;
	bool is_gacha_item_new = 4;
	repeated ItemParam token_item_list = 5;
}
